syntax = "proto3";

package pb;

import "rpc_get_exercises_by_initial.proto";
import "rpc_create_exercise.proto";

option go_package = "github.com/asadzeynal/gymbro-api/pb";

service GymBro {
  rpc CreateExercise(CreateExerciseRequest) returns (CreateExerciseResponse) {}
  rpc GetExercisesByInitial(GetExercisesByInitialRequest) returns (GetExercisesByInitialResponse) {}
}
